# diarization-benchmark

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  GETTING_STARTED.md  Makefile  README.md  SEQUESTERED_DATA.md  TESTING.md  pyproject.toml  pytest.ini  run_and_save.py  scheduler.py  test_ami_files.py  test_sequestered.py
config/: datasets.yaml  schedule.yaml
dashboard/: .gitignore  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/api/runs/: route.ts
dashboard/app/api/runs/[id]/: route.ts
dashboard/app/runs/[id]/: page.tsx
dashboard/components/: MetricsChart.tsx  NewRunForm.tsx  StatusBadge.tsx
dashboard/components/ui/: badge.tsx
dashboard/lib/: db.ts  utils.ts
data/sequestered/recordings/annotations/: audio_1.rttm  audio_2.rttm  audio_3.rttm  audio_4.rttm  audio_5.rttm  audio_6.rttm
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: generate_test_data.py  setup_ami.py  smoke_test.sh
src/benchmark/: __init__.py  cli.py
src/benchmark/core/: __init__.py  config.py  database.py  models.py
src/benchmark/data/: __init__.py
src/benchmark/evaluation/: __init__.py  metrics.py  mock_diarization.py
src/benchmark/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_models.py
